--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
     <body>
-        When you choose three intergers randomly from 1 to 15 (inclusive)
+        When you choose three integers randomly from 1 to 15 (inclusive)
         <h2>Problem 1</h2>
         find the probability that multiplication of these numbers is multiple of 15.<br>
         <span id="p1"></span>
@@ -12,7 +12,7 @@
         Line break:
         <select id="lb">
             <option value="0">No break</option>
-            <option value="1">Per Group of Intergers</option>
+            <option value="1">Per Group of Integers</option>
             <option value="2">Per Smallest value</option>
         </select>
         <br>
